--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vkontakte/vk-miniapps-deploy": "0.0.25",
     "@vkontakte/vkjs": "0.20.0",
     "@vkontakte/vkui": "4.28.1",
+    "@zandor300/react-apple-mapkitjs": "^0.10.0",
     "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "eruda": "^2.4.1",
