--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mini-app",
   "version": "0.0.0",
-  "homepage": "https://Yournam-e.github.io/eco/",
+  "homepage": "./",
   "scripts": {
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "vk-miniapps-deploy"
   },
   "engines": {
     "node": ">=12.0.0"
